RM 1215: Multi-body system support, other interface updates